# docs/swagger.yaml
@@ -39,8 +39,6 @@ definitions:
       position:
         example: 1
         type: integer
-      team:
-        type: integer
     type: object
   models.CreateUser:
     properties:
@@ -130,6 +128,17 @@ definitions:
       team:
         type: integer
     type: object
+  models.UpdateTeam:
+    properties:
+      budget:
+        type: integer
+      country:
+        type: string
+      name:
+        type: string
+      owner:
+        type: integer
+    type: object
   models.UpdateUser:
     properties:
       email:
@@ -149,40 +158,6 @@ info:
   title: Fantasy football manager API
   version: "1.0"
 paths:
-  /players:
-    post:
-      consumes:
-      - application/json
-      description: Create a player
-      parameters:
-      - description: Create player
-        in: body
-        name: player
-        required: true
-        schema:
-          $ref: '#/definitions/models.CreatePlayer'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: ""
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/httputil.HTTPError'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/httputil.HTTPError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/httputil.HTTPError'
-      security:
-      - BearerAuth: []
-      summary: Create a player
-      tags:
-      - Players
   /players/{id}:
     delete:
       consumes:
@@ -423,6 +398,12 @@ paths:
         name: id
         required: true
         type: integer
+      - description: Update team payload
+        in: body
+        name: team
+        required: true
+        schema:
+          $ref: '#/definitions/models.UpdateTeam'
       produces:
       - application/json
       responses:
@@ -482,6 +463,125 @@ paths:
           schema:
             $ref: '#/definitions/httputil.HTTPError'
       summary: List players of a team
+      tags:
+      - Teams
+    post:
+      consumes:
+      - application/json
+      description: Create a player on a new team
+      parameters:
+      - description: Create player
+        in: body
+        name: player
+        required: true
+        schema:
+          $ref: '#/definitions/models.CreatePlayer'
+      - description: Team ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+      security:
+      - BearerAuth: []
+      summary: Create a player on a new team
+      tags:
+      - Teams
+  /teams/{teamId}/players/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get a player by ID from a team.
+      parameters:
+      - description: Player ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Team ID
+        in: path
+        name: teamId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.ShowPlayer'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+      summary: Show a player from a team
+      tags:
+      - Teams
+    patch:
+      consumes:
+      - application/json
+      description: Update a player from a team
+      parameters:
+      - description: Update player
+        in: body
+        name: player
+        required: true
+        schema:
+          $ref: '#/definitions/models.UpdatePlayer'
+      - description: Player ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Team ID
+        in: path
+        name: teamId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+      security:
+      - BearerAuth: []
+      summary: Update a player from a team
       tags:
       - Teams
   /transfers:
@@ -891,6 +991,181 @@ paths:
         - write
         - admin
       summary: Get the logged in user
+      tags:
+      - Users
+  /users/me/team:
+    get:
+      consumes:
+      - application/json
+      description: Get the logged in user's team
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.ShowUser'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+      security:
+      - BearerAuth: []
+      summary: Get the logged in user's team
+      tags:
+      - Users
+    patch:
+      consumes:
+      - application/json
+      description: Edit the logged in user's team
+      parameters:
+      - description: Update team payload
+        in: body
+        name: team
+        required: true
+        schema:
+          $ref: '#/definitions/models.UpdateTeam'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+      security:
+      - BearerAuth: []
+      summary: Edit the logged in user's team
+      tags:
+      - Users
+  /users/me/team/players:
+    get:
+      consumes:
+      - application/json
+      description: Get the logged in user's team players
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.ShowPlayer'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+      security:
+      - BearerAuth: []
+      summary: Get the logged in user's team players
+      tags:
+      - Users
+  /users/me/team/players/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get the logged in user's team player
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.ShowPlayer'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+      security:
+      - BearerAuth: []
+      summary: Get the logged in user's team player
+      tags:
+      - Users
+    patch:
+      consumes:
+      - application/json
+      description: Get the logged in user's team players
+      parameters:
+      - description: Update player
+        in: body
+        name: player
+        required: true
+        schema:
+          $ref: '#/definitions/models.UpdatePlayer'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+      security:
+      - BearerAuth: []
+      summary: Edit the logged in user's team players
       tags:
       - Users
 securityDefinitions:
